--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,15 @@
 @charset "UTF-8";
 
+/* GENERAL */
+body, html {
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	background: orange; /* fallback */
+	background: radial-gradient(coral 0%, yellow 50%, indianred);
+	text-align: center;
+	font-family: Geneva, Tahoma, Verdana, sans-serif;
+	font-weight: normal;
+	color: black;
+}
