--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,12 @@ body, html {
 /* HEADER */
 h1 {
 	margin: 0;
-	text-decoration: underline;
 }
 
 header {
-	padding-top: 10vh;
+	padding: 1vh 0;
+	background-color: white;
+	color: black;
 }
 
 
